--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
 	<meta name="description" content="The web sandbox of Jefff Doan; my work, my musings on web design, email design, and other web-related thingamajigs." />
 	
 	<link rel="shortcut icon" type="image/x-icon" href="http://jefff.co//images/favicon.ico" />
-	<link rel="author" href="http://jefff.co//humans.txt" />
+	<link rel="author" href="http://jefff.co/humans.txt" />
 	
 	<link href='http://fonts.googleapis.com/css?family=Domine:400,700|Arimo:400,700,400italic,700italic' rel='stylesheet' type='text/css' />
 	{% if page.url != '/resume/index.html' %}
@@ -17,6 +17,8 @@
 	{% else %}
 	<link href="/stylesheets/app-r.css" rel="stylesheet" type="text/css" />
 	{% endif %}
+
+	<link rel="canonical" href="http://jefff.co{{ page.url | replace:'index.html',''}}" />
 	
 	<script type="text/javascript">
 
