--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -213,6 +213,9 @@ figure.featured {
 	min-height:15em;
 	box-shadow:0 0 5px rgba(0,0,0,0.25) inset, 0 0 25px rgba(0,0,0,0.15) inset;
 }
+figure.featured.giveabit {
+	background-image:url(http://jefff.co/images/giveabit.jpg);
+}
 figure a {
 	/*background:url(/images/dailytidbit.jpeg) no-repeat 0 0;
 	background-size:cover;*/
