Update :empty css post

--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -214,7 +214,7 @@ figure.featured {
 	box-shadow:0 0 5px rgba(0,0,0,0.25) inset, 0 0 25px rgba(0,0,0,0.15) inset;
 }
 figure.featured.giveabit {
-	background-image:url(http://jefff.co/images/giveabit.jpg);
+	background-image:url(http://jefff.co/images/giveabit-l.png);
 }
 figure a {
 	/*background:url(/images/dailytidbit.jpeg) no-repeat 0 0;
