--- a/stylesheets/app.css
+++ b/stylesheets/app.css
@@ -4,6 +4,7 @@
 	-webkit-box-sizing:border-box;
 	-moz-box-sizing:border-box;
 	box-sizing:border-box;
+	-webkit-tap-highlight-color: rgba(0,0,0,0);
 	/*-webkit-font-smoothing:antialiased;*/
 }
 ::selection {
@@ -20,7 +21,7 @@ html {
 	height:auto;
 	min-height:100%;
 	width:100%;
-	font:100%/1.5 'Arimo', 'Helvetica Neue', Arial, sans-serif;
+	font:92.5%/1.5 'Arimo', 'Helvetica Neue', Arial, sans-serif;
 	overflow:auto;
 	line-height:1.5;
 	color:#666;
@@ -714,7 +715,7 @@ article h2.h a {
 article .h span {
 	font-size:50%;
 	font-weight:normal;
-	opacity:.5;
+	opacity:.75;
 	display:block;
 	padding:.5em 0 0;
 }
@@ -772,6 +773,9 @@ article li, .thoughts article h2 {
 }
 
 @media screen and (min-width:30em) {
+	html {
+		font-size: 100%;
+	}
 	/*header h2 span {
 		font-size:50%;
 		position:relative;
